홈페이지 수정 배포 v0.7.3
- 일부 메뉴의 수량 명시 (치즈볼, 강정, 붕어빵)

--- a/index.html
+++ b/index.html
@@ -314,7 +314,8 @@ const recipeData = [
     { category: '푸드', name: '탕종 올리브 베이글', image: "https://placehold.co/600x400/DEB887/FFFFFF?text=Olive+Bagel", versions: { '조리법': { ingredients:['올리브 크림치즈'], instructions: ['에어프라이기 200도 3분'] } } },
     { category: '푸드', name: '탕종 블루베리 베이글', image: "https://placehold.co/600x400/DEB887/FFFFFF?text=Blueberry+Bagel", versions: { '조리법': { ingredients:['블루베리 크림치즈'], instructions: ['에어프라이기 200도 3분'] } } },
     { category: '푸드', name: '탕종 어니언 베이글', image: "https://placehold.co/600x400/DEB887/FFFFFF?text=Onion+Bagel", versions: { '조리법': { ingredients:['대파 크림치즈'], instructions: ['에어프라이기 200도 3분'] } } },
-    { category: '푸드', name: '붕어빵 (6ea)', image: "https://placehold.co/600x400/CD853F/FFFFFF?text=Bungeoppang", versions: { '조리법': { instructions: ["에어프라이기 180도 8분"] } } },
+    { category: '푸드', name: '붕어빵 (6ea)', image: "https://placehold.co/600x400/CD853F/FFFFFF?text=Bungeoppang", versions: { '조리법': { ingredients:['붕어빵 6개'], instructions: ["에어프라이기 180도 8분"] } } },
+    { category: '푸드', name: '반반 붕어빵 (팥3+슈3)', image: "https://placehold.co/600x400/CD853F/FFFFFF?text=Half+Bungeoppang", versions: { '조리법': { ingredients:['팥 붕어빵 3개', '슈크림 붕어빵 3개'], instructions: ["에어프라이기 180도 8분"] } } },
     { category: '푸드', name: '찰깨 크림빵', image: "https://placehold.co/600x400/F5DEB3/FFFFFF?text=Cream+Bread", versions: { '조리법': { instructions: ["전자레인지 20초"] } } },
     { category: '푸드', name: '버터 소금빵', image: "https://placehold.co/600x400/F4A460/FFFFFF?text=Salt+Bread", versions: { '조리법': { instructions: ["에어프라이기 180도 4분"] } } },
     { category: '푸드', name: '크로크 무슈', image: "https://placehold.co/600x400/DEB887/FFFFFF?text=Croque+Monsieur", versions: { '조리법': { instructions: ['포장지 모서리 자른 후 전자레인지 1분', '에어프라이기 180도 4분', '반으로 잘라 제공'] } } },
@@ -323,9 +324,9 @@ const recipeData = [
     { category: '푸드', name: '매콤 떡볶이', image: "https://placehold.co/600x400/B22222/FFFFFF?text=Tteokbokki", versions: { '조리법': { instructions: ["꺼내서 세게 흔들어 섞어주기", "유통기한에 구멍내고 물 10-20g 넣기", "전자레인지 3분 30초"] } } },
     { category: '푸드', name: '칠리 치즈 핫도그', image: "https://placehold.co/600x400/FF6347/FFFFFF?text=Chili+Cheese+Hotdog", versions: { '조리법': { instructions: ["소세지 에어프라이기 180도 3분", "빵에 소세지 넣고 살사 + 치즈소스 이후 파슬리", "박스 닫아서 전자레인지 20초"] } } },
     { category: '푸드', name: '플레인 핫도그', image: "https://placehold.co/600x400/FFE4B5/333333?text=Plain+Hotdog", versions: { '조리법': { instructions: ["소세지 에어프라이기 180도 3분", "빵에 피클 1스푼 펴바르고 소세지 넣기", "케찹, 머스타드 뿌리고 파슬리", "박스 닫아서 전자레인지 20초"] } } },
-    { category: '푸드', name: '떡강정', image: "https://placehold.co/600x400/CD5C5C/FFFFFF?text=Tteok+Gangjeong", versions: { '조리법': { ingredients:['떡 12개'], instructions: ["에어프라이기 200도 8분 조리 후 30초 이상 식힌 후 매콤소스와 함께 포장"] } } },
-    { category: '푸드', name: '순대강정', image: "https://placehold.co/600x400/A0522D/FFFFFF?text=Sundae+Gangjeong", versions: { '조리법': { ingredients:['순대 12개'], instructions: ["에어프라이기 200도 8분 조리 후 30초 이상 식힌 후 매콤소스와 함께 포장"] } } },
-    { category: '푸드', name: '반반강정', image: "https://placehold.co/600x400/D2691E/FFFFFF?text=Half+Half+Gangjeong", versions: { '조리법': { ingredients:['떡 6개', '순대 6개'], instructions: ["에어프라이기 200도 8분 조리 후 30초 이상 식힌 후 매콤소스와 함께 포장"] } } },
+    { category: '푸드', name: '떡강정 (12ea)', image: "https://placehold.co/600x400/CD5C5C/FFFFFF?text=Tteok+Gangjeong", versions: { '조리법': { ingredients:['떡 12개'], instructions: ["에어프라이기 200도 8분 조리 후 30초 이상 식힌 후 매콤소스와 함께 포장"] } } },
+    { category: '푸드', name: '순대강정 (12ea)', image: "https://placehold.co/600x400/A0522D/FFFFFF?text=Sundae+Gangjeong", versions: { '조리법': { ingredients:['순대 12개'], instructions: ["에어프라이기 200도 8분 조리 후 30초 이상 식힌 후 매콤소스와 함께 포장"] } } },
+    { category: '푸드', name: '반반강정 (떡6+순대6)', image: "https://placehold.co/600x400/D2691E/FFFFFF?text=Half+Half+Gangjeong", versions: { '조리법': { ingredients:['떡 6개', '순대 6개'], instructions: ["에어프라이기 200도 8분 조리 후 30초 이상 식힌 후 매콤소스와 함께 포장"] } } },
     { category: '푸드', name: '토도독 소세지', image: "https://placehold.co/600x400/FF4500/FFFFFF?text=Sausage", versions: { '조리법': { ingredients:['소세지 2개'], instructions: ["에어프라이기 4분", "케찹+머스타드 드리즐 후 파슬리 뿌리고 포장"] } } },
     { category: '푸드', name: '칠리 치즈 나초', image: "https://placehold.co/600x400/FFA500/FFFFFF?text=Chili+Cheese+Nachos", versions: { '제공': { ingredients:['나초 80g', '살사소스 40g', '치즈소스 40g'] } } },
     { category: '푸드', name: '가볍게 뿌셔진 나초', image: "https://placehold.co/600x400/FFA500/FFFFFF?text=Crushed+Nachos", versions: { '제공': { ingredients:['뿌셔진 나초 80g', '살사소스 40g', '치즈소스 40g'] } } },
@@ -333,7 +334,7 @@ const recipeData = [
     { category: '푸드', name: '새우 볶음밥', image: "https://placehold.co/600x400/FFE4C4/333333?text=Shrimp+Fried+Rice", versions: { '조리법': { ingredients:['계란 1pc'], instructions: ["전자레인지 6분", "케찹 뿌리고 파슬리 뿌린 후 보냉팩에 포장"] } } },
     { category: '푸드', name: '대패 삼겹 볶음밥', image: "https://placehold.co/600x400/D2B48C/FFFFFF?text=Pork+Belly+Fried+Rice", versions: { '조리법': { ingredients:['계란 1pc'], instructions: ["전자레인지 6분", "파슬리 뿌린 후 보냉팩에 포장"] } } },
     { category: '푸드', name: '김치 볶음밥', image: "https://placehold.co/600x400/DC143C/FFFFFF?text=Kimchi+Fried+Rice", versions: { '조리법': { ingredients:['계란 1pc'], instructions: ["전자레인지 6분", "파슬리 뿌린 후 보냉팩에 포장"] } } },
-    { category: '푸드', name: '바삭 감자 치즈볼', image: "https://placehold.co/600x400/FFD700/FFFFFF?text=Potato+Cheese+Ball", versions: { '조리법': { ingredients:['케찹 40g'], instructions: ["해동 없이 에어프라이기 6분", "샌드위치 용기에 담아 케찹과 함께 제공", "조리 후 최소 30초 공기와 접촉 후 뚜껑 닫기"] } } },
+    { category: '푸드', name: '바삭 감자 치즈볼 (5ea)', image: "https://placehold.co/600x400/FFD700/FFFFFF?text=Potato+Cheese+Ball", versions: { '조리법': { ingredients:['치즈볼 5개', '케찹 40g'], instructions: ["해동 없이 에어프라이기 6분", "샌드위치 용기에 담아 케찹과 함께 제공", "조리 후 최소 30초 공기와 접촉 후 뚜껑 닫기"] } } },
 
     // 팝콘
     { category: '팝콘', name: '카라멜 팝콘', image: "https://placehold.co/600x400/DAA520/FFFFFF?text=Caramel+Popcorn", versions: { '조리법': { ingredients: ['팝콘 옥수수: 1 CUP', '팝콘 오일: 150ml', '카라멜 시즈닝: 180ml'], instructions: ['모터와 히터를 함께 ON 합니다.', '오일 → 시즈닝 → 옥수수 순으로 넣습니다.', '팝콘이 20개 정도 터지면 히터를 OFF 합니다.', '소리가 멈추면 모터를 끄고 정리합니다.'] } } },
@@ -615,4 +616,5 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
