--- a/index.html
+++ b/index.html
@@ -80,8 +80,14 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center">
-                    <button class="gnb-btn font-bold text-xl text-[#6D4C41] active" data-view="home-view">
+                    <!-- Desktop Title -->
+                    <button class="gnb-btn font-bold text-xl text-[#6D4C41] active hidden md:flex items-center" data-view="home-view">
                         <i class="fas fa-home mr-2"></i>백억커피 매뉴얼
+                    </button>
+                    <!-- Mobile Logo + Title -->
+                    <button class="gnb-btn flex md:hidden items-center space-x-2 active" data-view="home-view">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmgK7X5UjYipj8B0revMEDlmBiNaoJfIDfpw&s" class="h-8 w-auto" alt="백억커피 로고">
+                        <span class="font-bold text-lg text-[#6D4C41]">매뉴얼</span>
                     </button>
                 </div>
                 <div class="hidden md:flex items-center">
@@ -98,10 +104,14 @@
                         <button class="gnb-btn text-gray-600 hover:bg-[#E0DACE] hover:text-[#6D4C41] px-3 py-2 rounded-md text-sm font-medium" data-view="recipe-view">레시피</button>
                     </div>
                 </div>
-                 <div class="-mr-2 flex md:hidden">
-                    <button type="button" id="mobile-menu-button" class="bg-white inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
+                <div class="flex items-center md:hidden">
+                    <div class="relative">
+                        <input type="text" id="global-search-input-mobile" placeholder="레시피 검색..." class="w-36 sm:w-48 px-3 py-1.5 pl-8 text-sm border border-[#D7CCC8] rounded-lg focus:outline-none focus:ring-2 focus:ring-[#A1887F] transition duration-200">
+                        <i class="fas fa-search absolute left-2.5 top-1/2 -translate-y-1/2 text-gray-400 pointer-events-none"></i>
+                    </div>
+                    <button type="button" id="mobile-menu-button" class="ml-2 p-2 rounded-md text-gray-500 hover:text-gray-800 hover:bg-gray-100 focus:outline-none">
                         <span class="sr-only">Open main menu</span>
-                        <i class="fas fa-bars"></i>
+                        <i class="fas fa-bars text-xl"></i>
                     </button>
                 </div>
             </div>
@@ -109,10 +119,6 @@
         <!-- Mobile menu, show/hide based on menu state. -->
         <div class="md:hidden hidden" id="mobile-menu">
             <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
-                <div class="relative mb-2">
-                    <input type="text" id="global-search-input-mobile" placeholder="통합 검색..." class="w-full px-4 py-2 pl-10 border border-[#D7CCC8] rounded-lg focus:outline-none focus:ring-2 focus:ring-[#A1887F] transition duration-200">
-                    <i class="fas fa-search absolute left-3 top-1/2 -translate-y-1/2 text-gray-400 pointer-events-none"></i>
-                </div>
                 <button class="gnb-btn text-gray-600 hover:bg-[#E0DACE] hover:text-[#6D4C41] block px-3 py-2 rounded-md text-base font-medium w-full text-left" data-view="system-view">시스템 관리</button>
                 <button class="gnb-btn text-gray-600 hover:bg-[#E0DACE] hover:text-[#6D4C41] block px-3 py-2 rounded-md text-base font-medium w-full text-left" data-view="inventory-view">발주 및 재고 관리</button>
                 <button class="gnb-btn text-gray-600 hover:bg-[#E0DACE] hover:text-[#6D4C41] block px-3 py-2 rounded-md text-base font-medium w-full text-left" data-view="status-view">메뉴 품절/해제 관리</button>
@@ -616,5 +622,6 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
