--- a/games/numberblocks/new.html
+++ b/games/numberblocks/new.html
@@ -434,7 +434,7 @@
          * [신규] 맞춤형 퀴즈 질문을 Gemini API에 요청
          */
         async function fetchAdaptiveQuestion() {
-            if (!API_KEY || API_KEY === "여기에_복사한_API_키를_붙여넣으세요") {
+            if (!API_KEY || API_KEY === "AIzaSyCtH-Rri2EVg32XR5ney1fp0Ew1wsaub9Y") {
                 showApiError(new Error("API_KEY is not set. Please set the API_KEY in the script."));
                 return;
             }
