--- a/hr/index.html
+++ b/hr/index.html
@@ -16,7 +16,7 @@
 
     <script>
         // [중요] 배포한 Google Apps Script 웹 앱 URL을 여기에 입력하세요.
-        const API_URL = 'YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL'; 
+        const API_URL = 'https://script.google.com/macros/s/AKfycbwHhAhlRbIpSgH5bK0qmS4pTxaOOLJmYTMZ-01Y_AAytAAaL1lg-F8LVuYhsHqj5blMnA/exec'; 
 
         async function fetchAPI(action, method = 'GET', payload = null) {
             // 실제 연동 시 주석 해제 및 구현
