--- a/hr/index.html
+++ b/hr/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>레스토지니 파트너센터 v3.4 (완전 복구)</title>
+    <title>레스토지니 파트너센터 v3.5 (API 통신 수정)</title>
     
     <!-- 스타일 -->
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
@@ -32,16 +32,25 @@
 
         const API_URL = 'https://script.google.com/macros/s/AKfycbwHhAhlRbIpSgH5bK0qmS4pTxaOOLJmYTMZ-01Y_AAytAAaL1lg-F8LVuYhsHqj5blMnA/exec'; 
 
+        // [수정됨] API 통신 함수: GET/POST 분기 처리 강화
         async function fetchAPI(action, method = 'GET', payload = null) {
             try {
-                const options = {
-                    method: 'POST',
-                    redirect: "follow",
-                    headers: { "Content-Type": "text/plain;charset=utf-8" },
-                    body: JSON.stringify({ action, payload })
-                };
-                const res = await fetch(API_URL, options);
-                return await res.json();
+                // 1. GET 요청 (데이터 조회)
+                if (method === 'GET') {
+                    const res = await fetch(`${API_URL}?action=${action}`);
+                    return await res.json();
+                } 
+                // 2. POST 요청 (데이터 변경)
+                else {
+                    const options = {
+                        method: 'POST',
+                        redirect: "follow",
+                        headers: { "Content-Type": "text/plain;charset=utf-8" },
+                        body: JSON.stringify({ action, payload })
+                    };
+                    const res = await fetch(API_URL, options);
+                    return await res.json();
+                }
             } catch (error) {
                 console.error("API Error:", error);
                 return { status: 'error', message: error.toString() };
@@ -53,6 +62,11 @@
                 oncomplete: function(data) { callback(data.address, data.zonecode); }
             }).open();
         }
+        
+        // 전역 에러 핸들러
+        window.onerror = function(msg) {
+            // alert('오류 발생: ' + msg); // 디버깅용 (필요시 주석 해제)
+        };
     </script>
     <style>
         body { font-family: 'Pretendard', sans-serif; background-color: #F2F4F6; color: #191F28; user-select: none; }
@@ -112,7 +126,7 @@
         <main class="flex-1 md:ml-64 p-4 md:p-8 pt-20 md:pt-8 bg-toss-grey100 min-h-screen" x-cloak>
             <div class="max-w-6xl mx-auto">
                 <header class="flex justify-between items-end mb-8">
-                    <div><h1 class="text-2xl font-bold text-toss-grey900 mb-1" x-text="getPageTitle()"></h1><p class="text-toss-grey600 text-sm">v3.4 (기능 복구 완료)</p></div>
+                    <div><h1 class="text-2xl font-bold text-toss-grey900 mb-1" x-text="getPageTitle()"></h1><p class="text-toss-grey600 text-sm">v3.5 (API 통신 수정)</p></div>
                     <button x-show="activeTab === 'employees'" @click="openEmpModal()" class="flex items-center gap-2 bg-toss-blue hover:bg-blue-600 text-white px-5 py-3 rounded-xl font-bold shadow-toss transition"><i data-lucide="plus" class="w-5 h-5"></i><span>새 직원 등록하기</span></button>
                 </header>
 
@@ -156,8 +170,6 @@
                                  </div>
                              </div>
                          </div>
-
-                         <!-- 월간 뷰 -->
                          <div x-show="viewType === 'month'" class="border border-toss-grey200 rounded-2xl overflow-hidden flex-1 flex flex-col">
                             <div class="grid grid-cols-7 bg-toss-grey50 border-b border-toss-grey200">
                                 <template x-for="(d,i) in ['월','화','수','목','금','토','일']"><div class="py-3 text-center text-sm font-bold text-toss-grey600" x-text="d"></div></template>
@@ -177,8 +189,6 @@
                                 </template>
                             </div>
                         </div>
-
-                        <!-- 주간 뷰 -->
                         <div x-show="viewType === 'week'" class="border border-toss-grey200 rounded-2xl overflow-hidden flex-1 flex flex-col h-[600px]">
                             <div class="grid grid-cols-8 bg-toss-grey50 border-b border-toss-grey200 shrink-0">
                                 <div class="py-3 text-center text-xs text-toss-grey500 border-r border-toss-grey200">시간</div>
@@ -212,17 +222,24 @@
 
                 <!-- 3. 급여 내역 -->
                 <div x-show="activeTab === 'payroll'" class="animate-fade-in space-y-6">
-                    <div class="grid gap-6 lg:grid-cols-2">
+                     <div class="grid gap-6 lg:grid-cols-2">
                         <template x-for="emp in employees" :key="emp.id">
                              <div class="bg-white rounded-3xl p-6 shadow-toss border border-toss-grey200 hover:shadow-toss-hover transition" 
-                                  x-data="{ pay: null, showDetail: false, showDeduction: false }" x-effect="pay = calculatePayroll(emp)">
+                                  x-data="{ pay: calculatePayroll(emp), showDetail: false, showDeduction: false }" x-effect="pay = calculatePayroll(emp)">
                                   <div class="text-center py-4 text-toss-grey500" x-show="!pay">급여 계산 중...</div>
                                   <template x-if="pay">
                                       <div>
                                         <div class="flex justify-between items-start mb-6">
                                             <div class="flex items-center gap-3">
                                                 <div class="w-12 h-12 rounded-full bg-toss-grey100 flex items-center justify-center text-xl">👤</div>
-                                                <div><div class="font-bold text-lg" x-text="emp.name"></div><div class="text-sm text-toss-grey500"><span x-text="formatRole(emp.role)"></span> · <span x-text="getContractLabel(emp.contractType)"></span></div></div>
+                                                <div>
+                                                    <div class="font-bold text-lg" x-text="emp.name"></div>
+                                                    <div class="text-sm text-toss-grey500">
+                                                        <span x-text="formatRole(emp.role)"></span> · 
+                                                        <span x-text="emp.role === 'parttime' ? '시급제' : '월급제(환산)'"></span> ·
+                                                        <span x-text="getContractLabel(emp.contractType)"></span>
+                                                    </div>
+                                                </div>
                                             </div>
                                             <div class="text-right"><div class="text-xs text-toss-grey500 mb-1">실제 받는 금액</div><div class="text-2xl font-bold text-toss-blue" x-text="formatCurrency(pay.netPay)"></div></div>
                                         </div>
@@ -232,9 +249,10 @@
                                                 <span class="text-toss-grey600 flex items-center gap-1">공제 합계 <i data-lucide="chevron-down" class="w-3 h-3 transition" :class="showDeduction?'rotate-180':''"></i></span><span class="font-bold text-toss-red" x-text="'- '+formatCurrency(pay.deductions.total)"></span>
                                             </div>
                                             <div x-show="showDeduction" class="pt-2 mt-2 border-t border-gray-200 text-xs text-toss-grey600 space-y-1" x-transition>
-                                                <div class="flex justify-between"><span>국민연금</span><span x-text="formatCurrency(pay.deductions.pension)"></span></div>
-                                                <div class="flex justify-between"><span>건강보험</span><span x-text="formatCurrency(pay.deductions.health)"></span></div>
-                                                <div class="flex justify-between"><span>고용보험</span><span x-text="formatCurrency(pay.deductions.employ)"></span></div>
+                                                <div class="flex justify-between" x-show="pay.deductions.pension > 0"><span>국민연금</span><span x-text="formatCurrency(pay.deductions.pension)"></span></div>
+                                                <div class="flex justify-between" x-show="pay.deductions.health > 0"><span>건강보험</span><span x-text="formatCurrency(pay.deductions.health)"></span></div>
+                                                <div class="flex justify-between" x-show="pay.deductions.care > 0"><span>장기요양</span><span x-text="formatCurrency(pay.deductions.care)"></span></div>
+                                                <div class="flex justify-between" x-show="pay.deductions.employ > 0"><span>고용보험</span><span x-text="formatCurrency(pay.deductions.employ)"></span></div>
                                                 <div class="flex justify-between"><span>소득세</span><span x-text="formatCurrency(pay.deductions.tax)"></span></div>
                                             </div>
                                         </div>
