--- a/hr/index.html
+++ b/hr/index.html
@@ -82,6 +82,7 @@
     <div class="fixed inset-0 flex flex-col items-center justify-center bg-white z-50" x-show="loading" x-transition.opacity>
         <div class="w-10 h-10 border-4 border-toss-blue border-t-transparent rounded-full animate-spin mb-4"></div>
         <div class="text-xl font-bold text-toss-grey900">데이터를 불러오는 중...</div>
+        <div class="text-sm text-toss-grey500 mt-2">잠시만 기다려주세요</div>
     </div>
 
     <div class="flex min-h-screen">
@@ -120,7 +121,7 @@
         <main class="flex-1 md:ml-64 p-4 md:p-8 pt-20 md:pt-8 bg-toss-grey100 min-h-screen" x-cloak>
             <div class="max-w-6xl mx-auto">
                 <header class="flex justify-between items-end mb-8">
-                    <div><h1 class="text-2xl font-bold text-toss-grey900 mb-1" x-text="getPageTitle()"></h1><p class="text-toss-grey600 text-sm">v3.9 (캘린더 날짜 픽스)</p></div>
+                    <div><h1 class="text-2xl font-bold text-toss-grey900 mb-1" x-text="getPageTitle()"></h1><p class="text-toss-grey600 text-sm">v3.10 (캘린더/급여 완벽 수정)</p></div>
                     <button x-show="activeTab === 'employees'" @click="openEmpModal()" class="flex items-center gap-2 bg-toss-blue hover:bg-blue-600 text-white px-5 py-3 rounded-xl font-bold shadow-toss transition"><i data-lucide="plus" class="w-5 h-5"></i><span>새 직원 등록하기</span></button>
                 </header>
 
@@ -152,9 +153,9 @@
                 <div x-show="activeTab === 'calendar'" class="animate-fade-in h-full flex flex-col">
                     <div class="bg-white rounded-3xl shadow-toss p-6 border border-toss-grey200 flex-1 flex flex-col min-h-[600px]">
                          <div class="flex justify-between items-center mb-6">
-                             <!-- [수정됨] 동적 날짜 표시 및 클릭 시 모달 오픈 -->
+                             <!-- [수정됨] 동적 날짜 표시 및 모달 트리거 -->
                              <h3 class="font-bold text-lg flex items-center gap-2 cursor-pointer hover:text-toss-blue transition" @click="showDateModal = true">
-                                 <span x-text="viewType === 'month' ? getMonthTitle() : getWeekRangeString()"></span>
+                                 <span x-text="viewType === 'month' ? getMonthString() : getWeekRangeString()"></span>
                                  <i data-lucide="chevron-down" class="w-4 h-4"></i>
                              </h3>
                              <div class="flex items-center gap-3">
@@ -168,6 +169,8 @@
                                  </div>
                              </div>
                          </div>
+
+                         <!-- 월간 뷰 -->
                          <div x-show="viewType === 'month'" class="border border-toss-grey200 rounded-2xl overflow-hidden flex-1 flex flex-col">
                             <div class="grid grid-cols-7 bg-toss-grey50 border-b border-toss-grey200">
                                 <template x-for="(d,i) in ['월','화','수','목','금','토','일']"><div class="py-3 text-center text-sm font-bold text-toss-grey600" x-text="d"></div></template>
@@ -183,10 +186,13 @@
                                                 </div>
                                             </template>
                                         </div>
+                                        <div x-show="d.day" class="absolute bottom-2 right-2 opacity-0 group-hover:opacity-100 transition"><i data-lucide="plus-circle" class="w-5 h-5 text-toss-grey400 hover:text-toss-blue"></i></div>
                                     </div>
                                 </template>
                             </div>
                         </div>
+
+                        <!-- 주간 뷰 -->
                         <div x-show="viewType === 'week'" class="border border-toss-grey200 rounded-2xl overflow-hidden flex-1 flex flex-col h-[600px]">
                             <div class="grid grid-cols-8 bg-toss-grey50 border-b border-toss-grey200 shrink-0">
                                 <div class="py-3 text-center text-xs text-toss-grey500 border-r border-toss-grey200">시간</div>
@@ -276,7 +282,7 @@
         </main>
     </div>
 
-    <!-- 날짜 선택 모달 (신규) -->
+    <!-- 년/월 선택 모달 (New) -->
     <div x-show="showDateModal" class="fixed inset-0 bg-black/40 backdrop-blur-sm z-50 flex items-center justify-center p-4" x-cloak>
         <div class="bg-white w-80 rounded-3xl shadow-2xl p-6" @click.away="showDateModal = false">
             <div class="flex justify-between items-center mb-4"><h3 class="text-lg font-bold">날짜 선택</h3><button @click="showDateModal=false"><i data-lucide="x"></i></button></div>
@@ -287,16 +293,15 @@
             </div>
             <div class="grid grid-cols-4 gap-2">
                 <template x-for="m in 12">
-                    <button @click="selectDate(modalYear, m-1)" class="py-2 rounded-lg text-sm font-medium hover:bg-toss-blueLight hover:text-toss-blue transition" :class="m-1 === currentDate.getMonth() && modalYear === currentDate.getFullYear() ? 'bg-toss-blue text-white hover:bg-toss-blue hover:text-white' : 'bg-toss-grey50 text-toss-grey700'" x-text="m + '월'"></button>
+                    <button @click="selectDate(modalYear, m-1)" class="py-2 rounded-lg text-sm font-medium hover:bg-toss-blueLight hover:text-toss-blue transition" :class="m-1 === currentDate.getMonth() && modalYear === currentDate.getFullYear() ? 'bg-toss-blue text-white' : 'bg-toss-grey50 text-toss-grey700'" x-text="m + '월'"></button>
                 </template>
             </div>
         </div>
     </div>
 
-    <!-- 직원/근무 모달 (기존과 동일) -->
+    <!-- 직원/근무 모달 (기존) -->
     <div x-show="showEmpModal" class="fixed inset-0 bg-black/40 backdrop-blur-sm z-50 flex items-center justify-center p-4" x-cloak>
         <div class="bg-white w-full max-w-2xl rounded-[32px] shadow-2xl p-8 max-h-[90vh] overflow-y-auto" @click.away="showEmpModal = false">
-            <!-- (폼 내용은 위와 동일) -->
             <div class="flex justify-between mb-6"><h2 class="text-2xl font-bold text-toss-grey900">직원 정보 입력</h2><button @click="showEmpModal = false"><i data-lucide="x"></i></button></div>
             <form @submit.prevent="saveEmployee" class="space-y-6">
                 <div class="grid grid-cols-2 gap-4"><div><label class="block text-sm font-bold mb-1">이름</label><input x-model="newEmp.name" class="toss-input" required></div><div><label class="block text-sm font-bold mb-1">주민번호</label><input x-model="newEmp.rrn" class="toss-input"></div></div>
@@ -329,7 +334,7 @@
                 menuItems: [ {id:'employees', label:'직원 관리', icon:'users'}, {id:'calendar', label:'근무 일정', icon:'calendar'}, {id:'payroll', label:'급여 내역', icon:'calculator'} ],
                 currentDate: new Date(2025, 11, 1), employees: [], shifts: [], weekDays: [], dragState: { active: false },
                 showEmpModal: false, isEmpEditMode: false, editingEmpId: null, showShiftModal: false, isEditMode: false, editingShiftId: null, targetDateStr: '',
-                newEmp: { name: '', role: 'parttime', contractType: 'insurance4', basePay: 10030, joinDate: '', rrn: '', address: '', bankName: '', accountNumber: '', accountHolder: '', schedule: {} }, newShift: { empId: null, startTime: '09:00', endTime: '18:00' },
+                newEmp: { name: '', role: 'parttime', contractType: 'insurance4', basePay: 10030, joinDate: new Date().toISOString().split('T')[0], rrn: '', address: '', bankName: '', accountNumber: '', accountHolder: '', schedule: {} }, newShift: { empId: null, startTime: '09:00', endTime: '18:00' },
                 showDateModal: false, modalYear: 2025,
 
                 async initApp() {
@@ -348,7 +353,7 @@
                             return e; 
                         });
                         if (shiftRes.status === 'success') {
-                            // [Fix] Date Format Normalization
+                            // [Fix] Date Format: YYYY-MM-DD
                             this.shifts = shiftRes.data.map(s => {
                                 if(s.date && s.date.includes('T')) s.date = s.date.split('T')[0];
                                 return s;
@@ -358,7 +363,7 @@
                 },
                 // Helpers
                 getPageTitle() { return {'employees':'직원 관리','calendar':'근무 일정','payroll':'급여 내역'}[this.activeTab]; },
-                getMonthTitle() { return `${this.currentDate.getFullYear()}년 ${this.currentDate.getMonth() + 1}월`; },
+                getMonthString() { return `${this.currentDate.getFullYear()}년 ${this.currentDate.getMonth() + 1}월`; },
                 formatCurrency(v) { return Math.floor(v||0).toLocaleString()+'원'; },
                 formatRole(r) { return {'manager':'매니저','parttime':'아르바이트','staff':'정규직'}[r]; },
                 getContractLabel(t) { return t==='insurance4'?'4대보험':(t==='freelancer'?'프리랜서':'고용·산재'); },
@@ -373,7 +378,7 @@
                 },
                 getShifts(d) { return this.shifts.filter(s => s.date === d); },
                 changeMonth(o) { this.currentDate = new Date(this.currentDate.getFullYear(), this.currentDate.getMonth()+o, 1); },
-                changeDate(o) { if (this.viewType === 'month') this.changeMonth(o); else { const n = new Date(this.currentDate); n.setDate(n.getDate() + (o * 7)); this.currentDate = n; this.updateWeekDays(); } },
+                changeDate(o) { if (this.viewType === 'month') this.changeMonth(o); else { const n = new Date(this.currentDate); n.setDate(n.getDate() + (o * 7)); this.currentDate = new Date(n); this.updateWeekDays(); } },
                 selectDate(y, m) { this.currentDate = new Date(y, m, 1); this.showDateModal = false; this.updateWeekDays(); },
                 updateWeekDays() {
                     const curr = new Date(this.currentDate); const day = curr.getDay(); const diff = (day === 0 ? -6 : 1) - day;
